[package]
name = "solana-keeper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
solana-client = "3.1.2"
solana-sdk = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
